--- a/story.html
+++ b/story.html
@@ -66,7 +66,7 @@
                 lmsEnabled: false,
                 tincanEnabled: false,
                 aoEnabled: false,
-                runtimeOrder: [{"type":"html5","url":"story_html5.html"},{"type":"flash","url":"story_flash.html"}],
+                runtimeOrder: [{"type":"amp","url":"amplaunch.html"},{"type":"html5","url":"story_html5.html"},{"type":"flash","url":"story_flash.html"}],
                 warnOnCommitFail: false
             };
 
